--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,7 +23,7 @@ phases:
     commands:
       - echo Entered the pre_build phase..
       #- $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-      - docker login --username ibuchh --password $LOGIN_PASSWORD
+      # - docker login --username kyivtank --password $LOGIN_PASSWORD
       - docker login –u $LOGIN_USER –p $LOGIN_PASSWORD
       - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - DOCKER_REPO_URL=$DOCKER_REPO_USER/$DOCKER_REPO_NAME
